bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: ')' expected but '=' found.
  if (estSurMessage():Boolean=true){
                             ^BDR:24: error: illegal start of simple expression
} 
^